Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 2.6.0-beta
-
MacOSX 10.6.8
Description
Steps to reproduce:
- open Settings -> Build & Run -> QtVersions
- have more than 1 QtVersion configured
- select one of the QtVersions
- open one of the Details widgets below
- select another QtVersion
Expected behaviour:
- other QtVersion should be visible and all widgets as well (with their preferred size)
Current behaviour:
- some widgets are too small to see anything on them (see attached img)
Note: Maybe it would be the easiest to just reset the state of the Details widget below (if it's actually opened and you're selecting another Qt version the new Qt versions is shown with opened Details widget as well - why not start always with a closed Details widget?)