Fix visibility of info widget in Qt version settings.

E.g. when changing the selected Qt version while one of the details
widgets is expanded.

Task-number: QTCREATORBUG-8026
Change-Id: Id10db9f917fce481791b70e37e5ded7e3dc13b32
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>
Reviewed-by: Christian Stenger <christian.stenger@digia.com>